2008-01-04  Tassilo Horn  <tassilo@member.fsf.org>

	* doc-view.el (doc-view-scroll-up-or-next-page)
	(doc-view-scroll-down-or-previous-page): Don't scroll to the
	top/bottom again when on the first/last page.

2008-01-04  Juanma Barranquero  <lekktu@gmail.com>

	* bs.el (bs--get-mode-name): Fix typo in previous change.

2008-01-04  Dan Nicolaescu  <dann@ics.uci.edu>

	* mouse.el (mouse-popup-menubar): Fix typo.

	* emacs-lisp/bytecomp.el (byte-compile-from-buffer): Move one more
	form inside with-current-buffer.

	* progmodes/antlr-mode.el (provide): Move to the end of file.
	(require): Don't require font-lock and compile.
	(outline-level, imenu-use-markers, imenu-create-index-function):
	Move declarations to top level.
	(cond-emacs-xemacs-macfn): Declare for compiler.

	* vc-bzr.el (vc-bzr-root):
	* vc-arch.el (vc-arch-root): Only set a property if the file is
	managed by this backend.

	* vc-hg.el (vc-hg-state): Support the new status code for
	up-to-date.

2008-01-04  Tassilo Horn  <tassilo@member.fsf.org>

	* doc-view.el (doc-view-scroll-up-or-next-page)
	(doc-view-scroll-down-or-previous-page): Use image-scroll-up and
	image-scroll-down instead of the non-image equivalents.  Don't
	rely on a signalled condition but switch pages when scrolling
	doesn't change the vertical position anymore.
	(doc-view-mode-map): Remap scroll-{up,down} to
	image-scroll-{up,down}.

2008-01-04  Rob Riepel  <riepel@networking.Stanford.EDU>

	* emulation/tpu-edt.el (tpu-load-xkeys): Recommend to run the
	tpu-mapper command rather than load the tpu-mapper package.

	* emulation/tpu-mapper.el (tpu-mapper): New command.
	Contains all the code previously at top-level.

2008-01-04  Stefan Monnier  <monnier@iro.umontreal.ca>

	* bs.el (bs--sort-by-mode, bs--get-mode-name):
	* imenu.el (imenu-add-to-menubar):
	* makesum.el (make-command-summary):
	* mouse.el (mouse-major-mode-menu, mouse-popup-menubar, mouse-buffer-menu):
	* msb.el (msb--mode-menu-cond):